--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -7,7 +7,7 @@
 version: '2'
 services:
   server:
-    image: redash/redash:latest
+    image: ytqiu/redash:latest
     command: server
     depends_on:
       - postgres
@@ -23,7 +23,7 @@ services:
       REDASH_WEB_WORKERS: 4
     restart: always
   worker:
-    image: redash/redash:latest
+    image: ytqiu/redash:latest
     command: scheduler
     environment:
       PYTHONUNBUFFERED: 0
@@ -35,9 +35,13 @@ services:
     restart: always
   redis:
     image: redis:3.0-alpine
+    #ports:
+    #- 6379:6379
     restart: always
   postgres:
     image: postgres:9.5.6-alpine
+    #ports:
+    #- 5432:5432
     # volumes:
     #   - /opt/postgres-data:/var/lib/postgresql/data
     restart: always
