--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "brace": "^0.10.0",
     "chroma-js": "^1.3.6",
     "core-js": "https://registry.npmjs.org/core-js/-/core-js-2.4.1.tgz",
-    "cornelius": "git+https://github.com/restorando/cornelius.git",
+    "cornelius": "git+https://github.com/restorando/cornelius.git#24d935811186c165c8ba63244ff363da71f32dcf",
     "d3": "^3.5.17",
     "d3-cloud": "^1.2.4",
     "debug": "^3.1.0",
@@ -65,7 +65,7 @@
     "mousetrap": "^1.6.1",
     "mustache": "^2.3.0",
     "numeral": "^2.0.6",
-    "pace-progress": "git+https://github.com/getredash/pace.git",
+    "pace-progress": "git+https://github.com/getredash/pace.git#1011f6d0d7c32f8bc89ea1a04b7ffa43d5a301b4",
     "pivottable": "^2.15.0",
     "plotly.js": "1.30.1",
     "prop-types": "^15.6.1",
